<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@mipmap/zx_bg"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/image_return"
            android:background="@mipmap/icon_return"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/x20"
            android:layout_marginStart="@dimen/space_20"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_height="wrap_content"/>

    <ImageView
            android:id="@+id/image_avatar"
            android:background="@mipmap/ic_launcher_round"
            android:layout_width="@dimen/x94"
            android:layout_marginTop="@dimen/x21"
            android:layout_marginStart="@dimen/space_20"
            app:layout_constraintTop_toBottomOf="@+id/image_return"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_height="@dimen/x94"/>

    <TextView
            android:id="@+id/tv_user_name"
            app:layout_constraintTop_toBottomOf="@+id/image_return"
            android:layout_marginTop="@dimen/x30"
            android:layout_width="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/image_return"
            android:layout_marginStart="@dimen/space_69"
            android:textSize="@dimen/text_22"
            android:textColor="@color/white"
            android:text="@string/app_name"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tv_user_phone"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
            android:layout_marginTop="@dimen/space_5"
            android:layout_width="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/tv_user_name"
            android:textSize="@dimen/text_16"
            android:textColor="@color/white"
            android:text="@string/app_name"
            android:layout_height="wrap_content"/>

    <ImageView
            android:id="@+id/image_card"
            android:background="@mipmap/uesrback_card"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/image_avatar"
            android:layout_marginTop="@dimen/x25"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="wrap_content"/>


    <TextView
            app:layout_constraintTop_toTopOf="@+id/image_card"
            android:layout_marginTop="@dimen/x20"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_22"
            android:textColor="@color/user_change_pass"
            android:text="@string/company_profile"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_height="wrap_content"/>


    <TextView
            android:id="@+id/tv_company_profile"
            app:layout_constraintTop_toTopOf="@+id/image_card"
            android:layout_marginTop="@dimen/x87"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_18"
            android:textColor="@color/user_change_pass"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/company_profile"
            android:layout_height="wrap_content"/>

    <TextView
            android:text="@string/scan_setting"
            android:textSize="@dimen/text_18"
            android:layout_marginStart="@dimen/x20"
            app:layout_constraintBottom_toBottomOf="@+id/velocity"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Switch
            android:id="@+id/velocity"
            app:layout_constraintEnd_toEndOf="parent"
            android:textOn="@string/scan_fast"
            android:textOff="@string/scan_slow"
            android:showText="true"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:layout_marginEnd="@dimen/x30"
            android:layout_marginTop="@dimen/x20"
            android:switchTextAppearance="@style/SwitchTheme"
            android:thumb="@drawable/switch_custom_thumb_selector"
            android:track="@drawable/switch_custom_track_selector"
            app:layout_constraintTop_toBottomOf="@+id/tv_company_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:text="@string/aim_setting"
            android:textSize="@dimen/text_18"
            android:layout_marginStart="@dimen/x20"
            app:layout_constraintBottom_toBottomOf="@+id/aimLight"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Switch
            android:id="@+id/aimLight"
            app:layout_constraintEnd_toEndOf="parent"
            android:textOn="@string/aim_open"
            android:textOff="@string/aim_close"
            android:showText="true"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:layout_marginEnd="@dimen/x30"
            android:layout_marginTop="@dimen/x30"
            android:switchTextAppearance="@style/SwitchTheme"
            android:thumb="@drawable/switch_custom_thumb_selector"
            android:track="@drawable/switch_custom_track_selector"
            app:layout_constraintTop_toBottomOf="@+id/velocity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/bt_login_out"
            android:background="@mipmap/signout_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_marginBottom="@dimen/space_25"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="wrap_content"/>


</android.support.constraint.ConstraintLayout>